--- a/weitaixin/src/main/res/layout/item_information.xml
+++ b/weitaixin/src/main/res/layout/item_information.xml
@@ -18,11 +18,11 @@
             <TextView
                 android:id="@+id/tvRecordDelete"
                 android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_gravity="right|center_vertical"
-                android:layout_marginBottom="6dp"
-                android:layout_marginRight="6dp"
-                android:layout_marginTop="6dp"
+                android:layout_height="56dp"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginTop="4dp"
                 android:background="@color/red0"
                 android:gravity="center"
                 android:text="删 除"
