--- a/weitaixin/src/main/res/layout/item_record.xml
+++ b/weitaixin/src/main/res/layout/item_record.xml
@@ -1,39 +1,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/gray17"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/gray17"
+    android:orientation="vertical">
 
     <View
         android:layout_width="1dp"
         android:layout_height="13dp"
         android:layout_marginLeft="49dp"
-        android:background="@color/green0"/>
+        android:background="@color/green0" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="74dp">
 
-        <TextView
-            android:id="@+id/tvRecordDelete"
+        <RelativeLayout
             android:layout_width="100dp"
-            android:layout_height="72dp"
+            android:layout_height="74dp"
             android:layout_gravity="right|center_vertical"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="1dp"
-            android:layout_marginTop="1dp"
-            android:background="@color/red0"
-            android:gravity="center"
-            android:text="删 除"
-            android:textColor="@drawable/text_color_remove_selector"
-            android:textSize="@dimen/font16"/>
+            android:background="@color/red0">
+
+            <TextView
+                android:id="@+id/tvRecordDelete"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="4dp"
+                android:background="@color/red0"
+                android:gravity="center"
+                android:text="删 除"
+                android:textColor="@drawable/text_color_remove_selector"
+                android:textSize="@dimen/font16" />
+        </RelativeLayout>
 
         <ImageView
             android:layout_width="74dp"
             android:layout_height="74dp"
             android:layout_marginLeft="9dp"
-            android:src="@drawable/bg_white_circle"/>
+            android:src="@drawable/bg_white_circle" />
 
         <RelativeLayout
             android:id="@+id/rlRecordItem"
@@ -51,7 +56,7 @@
                     android:layout_width="1dp"
                     android:layout_height="fill_parent"
                     android:layout_marginLeft="40dp"
-                    android:background="@color/green0"/>
+                    android:background="@color/green0" />
 
                 <LinearLayout
                     android:id="@+id/ll_Layout"
@@ -68,14 +73,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/gray3"
-                        android:textSize="@dimen/font10"/>
+                        android:textSize="@dimen/font10" />
 
                     <TextView
                         android:id="@+id/tvCircleTime2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black1"
-                        android:textSize="@dimen/font18"/>
+                        android:textSize="@dimen/font18" />
                 </LinearLayout>
 
 
@@ -86,7 +91,7 @@
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="18dp"
                     android:layout_toRightOf="@id/ll_Layout"
-                    android:src="@drawable/record_clock"/>
+                    android:src="@drawable/record_clock" />
 
 
                 <TextView
@@ -100,7 +105,7 @@
                     android:singleLine="true"
                     android:text="0秒"
                     android:textColor="@color/black0"
-                    android:textSize="@dimen/font16"/>
+                    android:textSize="@dimen/font16" />
 
 
                 <TextView
@@ -114,7 +119,7 @@
                     android:singleLine="true"
                     android:text="月日"
                     android:textColor="@color/gray3"
-                    android:textSize="@dimen/font_normal"/>
+                    android:textSize="@dimen/font_normal" />
 
                 <ImageView
                     android:id="@+id/iv_circle"
@@ -123,7 +128,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="60dp"
-                    android:src="@drawable/shape_circle"/>
+                    android:src="@drawable/shape_circle" />
 
                 <TextView
                     android:id="@+id/tvAdviceStatus"
@@ -134,7 +139,7 @@
                     android:background="@drawable/bg_ask_doctor"
                     android:gravity="center"
                     android:text="问医生"
-                    android:textColor="@drawable/text_color_selector"/>
+                    android:textColor="@drawable/text_color_selector" />
             </RelativeLayout>
         </RelativeLayout>
     </FrameLayout>
