增加选择上传曲线和上传全部的选择

--- a/weitaixinpro/src/main/res/layout/activity_monitor_play.xml
+++ b/weitaixinpro/src/main/res/layout/activity_monitor_play.xml
@@ -179,7 +179,7 @@
                 android:id="@+id/rl_data"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
-
+                android:layout_marginLeft="28dp"
                 >
 
                 <TextView
