--- a/weitaixinpro/src/main/res/values/colors.xml
+++ b/weitaixinpro/src/main/res/values/colors.xml
@@ -37,6 +37,8 @@
 
     <!-- 高危评分 button 字体颜色-->
     <color name="gray20">#FF7B7B7B</color>
+    <color name="gray21">#AA4A4A4A</color>
+
     <color name="black0">#FF222222</color>
     <color name="black1">#FF000000</color>
     <color name="black2">#FF353330</color>
@@ -75,7 +77,6 @@
     <color name="text_content_color">#FF444444</color>
     <color name="text_subtitle_color">#FFA8A8A8</color>
     <color name="transparent">#00000000</color>
-
 
 
 </resources>
