修复记录的bug

--- a/weitaixin/src/main/res/layout/pay_result.xml
+++ b/weitaixin/src/main/res/layout/pay_result.xml
@@ -3,6 +3,7 @@
     style="@style/NavPage">
 
     <TextView
+        android:id="@+id/tvWxErr"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
