--- a/weitaixin/src/main/res/layout/activity_pay_order_details_new.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_order_details_new.xml
@@ -347,69 +347,79 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <RelativeLayout
+                    <LinearLayout
+                        android:id="@+id/llPalneWay"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="wrap_content"
+                        <RelativeLayout
+                            android:id="@+id/rlPalneWay"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:gravity="center"
-                            android:paddingBottom="8dp"
-                            android:paddingTop="8dp"
-                            android:text="支付方式"
-                            android:textColor="@color/gray4"
-                            android:textSize="@dimen/font14" />
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/tvOrderDetailsPayway"
-                            android:layout_width="wrap_content"
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:gravity="center"
+                                android:paddingBottom="8dp"
+                                android:paddingTop="8dp"
+                                android:text="支付方式"
+                                android:textColor="@color/gray4"
+                                android:textSize="@dimen/font14" />
+
+                            <TextView
+                                android:id="@+id/tvOrderDetailsPayway"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:gravity="center"
+                                android:paddingBottom="8dp"
+                                android:paddingTop="8dp"
+                                android:text=""
+                                android:textSize="@dimen/font14" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:gravity="center"
-                            android:paddingBottom="8dp"
-                            android:paddingTop="8dp"
-                            android:text=""
-                            android:textSize="@dimen/font14" />
-                    </RelativeLayout>
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:orientation="horizontal">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:orientation="horizontal">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:gravity="center"
+                                android:paddingBottom="8dp"
+                                android:paddingTop="8dp"
+                                android:text="领取方式"
+                                android:textColor="@color/gray4"
+                                android:textSize="@dimen/font14" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:gravity="center"
-                            android:paddingBottom="8dp"
-                            android:paddingTop="8dp"
-                            android:text="领取方式"
-                            android:textColor="@color/gray4"
-                            android:textSize="@dimen/font14" />
+                            <TextView
+                                android:id="@+id/tvOrderDetailsPullway"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:gravity="center"
+                                android:paddingBottom="8dp"
+                                android:paddingTop="8dp"
+                                android:text=""
+                                android:textSize="@dimen/font14" />
+                        </RelativeLayout>
 
-                        <TextView
-                            android:id="@+id/tvOrderDetailsPullway"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:gravity="center"
-                            android:paddingBottom="8dp"
-                            android:paddingTop="8dp"
-                            android:text=""
-                            android:textSize="@dimen/font14" />
-                    </RelativeLayout>
+                    </LinearLayout>
 
-                    <RelativeLayout
+
+                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
