--- a/weitaixin/src/main/res/layout/fragment_home_page.xml
+++ b/weitaixin/src/main/res/layout/fragment_home_page.xml
@@ -155,6 +155,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rlHomeHeadArea"
+        android:layout_marginBottom="2dp"
         android:background="@color/white0"
         android:orientation="vertical">
 
