--- a/weitaixin/src/main/res/layout/item_record.xml
+++ b/weitaixin/src/main/res/layout/item_record.xml
@@ -17,7 +17,7 @@
 
         <RelativeLayout
             android:layout_width="100dp"
-            android:layout_height="74dp"
+            android:layout_height="66dp"
             android:layout_gravity="right|center_vertical"
             android:background="@color/red0">
 
@@ -128,6 +128,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="60dp"
+                    android:visibility="gone"
                     android:src="@drawable/shape_circle" />
 
                 <TextView
@@ -136,7 +137,7 @@
                     android:layout_height="36dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="@drawable/bg_ask_doctor"
+                    android:background="@drawable/recode_half_circle"
                     android:gravity="center"
                     android:text="问医生"
                     android:textColor="@drawable/text_color_selector" />
