--- a/weitaixin/src/main/res/layout/activity_me_main_fragment.xml
+++ b/weitaixin/src/main/res/layout/activity_me_main_fragment.xml
@@ -11,6 +11,11 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/gray1"
+        android:layout_height="1dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
