--- a/weitaixin/src/main/res/layout/activity_wo_information.xml
+++ b/weitaixin/src/main/res/layout/activity_wo_information.xml
@@ -311,6 +311,69 @@
 
             </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/ll_set_07"
+                style="@style/wo_info_item"
+                android:layout_marginTop="2dp"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dimen_dp_20"
+                    android:singleLine="true"
+                    android:text="咨询数"
+                    android:textColor="@color/text_subtitle_color"
+                    android:textSize="@dimen/font_normal"/>
+
+
+                <TextView
+                    android:id="@+id/tv_doctor_advisory_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="30dp"
+                    android:singleLine="true"
+                    android:text="未填"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/font_normal"/>
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/ll_set_08"
+                style="@style/wo_info_item"
+                android:layout_marginTop="2dp"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dimen_dp_20"
+                    android:singleLine="true"
+                    android:text="剩余咨询数"
+                    android:textColor="@color/text_subtitle_color"
+                    android:textSize="@dimen/font_normal"/>
+
+
+                <TextView
+                    android:id="@+id/tv_doctor_surplus_advisory_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="30dp"
+                    android:singleLine="true"
+                    android:text="未填"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/font_normal"/>
+
+            </RelativeLayout>
+
         </LinearLayout>
     </ScrollView>
 
