--- a/weitaixin/src/main/res/layout/monitor_dialog.xml
+++ b/weitaixin/src/main/res/layout/monitor_dialog.xml
@@ -2,17 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="@color/white0">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
         android:layout_marginRight="30dp"
-        android:background="@drawable/corner_background_white">
+        android:background="@drawable/corner_background_white"
+        android:paddingBottom="30dp"
+        android:paddingTop="30dp">
 
         <TextView
             android:id="@+id/tvPayTitle"
@@ -20,8 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:paddingBottom="34dp"
-            android:text="问医生费医生费医医生费生费医生费医生费医生费用?"
+            android:paddingBottom="30dp"
+            android:text="问医生咨询生咨询生咨询生咨询生咨询生咨询生咨询生咨询生咨询生咨询生咨询费用?"
             android:textColor="@color/black0"
             android:textSize="@dimen/font16" />
 
@@ -31,8 +31,7 @@
             android:layout_below="@id/tvPayTitle"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvPayNO"
