--- a/weitaixin/src/main/res/layout/item_record.xml
+++ b/weitaixin/src/main/res/layout/item_record.xml
@@ -34,17 +34,20 @@
                 android:textSize="@dimen/font16" />
         </RelativeLayout>
 
-        <ImageView
+    <!--    <ImageView
             android:layout_width="74dp"
             android:layout_height="74dp"
             android:layout_marginLeft="9dp"
-            android:src="@drawable/bg_white_circle" />
+            android:src="@drawable/bg_white_circle" />-->
 
         <RelativeLayout
             android:id="@+id/rlRecordItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
