--- a/weitaixin/src/main/res/layout/viewpager_item_last.xml
+++ b/weitaixin/src/main/res/layout/viewpager_item_last.xml
@@ -1,28 +1,21 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivWelcome05"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:scaleType="fitXY"
-        android:src="@drawable/welcome" />
+        android:src="@drawable/welcome_05" />
 
     <TextView
         android:id="@+id/tvNextAction"
-        android:layout_width="wrap_content"
-        android:text="立即开启"
-        android:textColor="@color/white0"
-        android:paddingLeft="40dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="14dp"
-        android:paddingRight="40dp"
-        android:layout_marginBottom="70dp"
-        android:background="@drawable/corner_welcome"
-        android:textSize="@dimen/font26"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@drawable/welcome_05_btn" />
 
-</FrameLayout>
+</LinearLayout>
