--- a/weitaixin/src/main/res/layout/monitor_dialog.xml
+++ b/weitaixin/src/main/res/layout/monitor_dialog.xml
@@ -15,7 +15,7 @@
         android:paddingTop="30dp">
 
         <TextView
-            android:id="@+id/tvPayTitle"
+            android:id="@+id/title"
             android:layout_width="260dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -28,13 +28,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tvPayTitle"
+            android:layout_below="@id/title"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvPayNO"
+                android:id="@+id/left"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -49,7 +49,7 @@
                 android:textSize="@dimen/font14" />
 
             <TextView
-                android:id="@+id/tvPayYES"
+                android:id="@+id/right"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
