首页崩溃的问题

--- a/weitaixin/src/main/res/layout/activity_login_sms_auth_code.xml
+++ b/weitaixin/src/main/res/layout/activity_login_sms_auth_code.xml
@@ -79,7 +79,7 @@
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/pitch"
+            android:src="@drawable/pitch"
             android:scaleType="fitXY"/>
 
         <TextView
