--- a/weitaixin/src/main/res/layout/activity_main_welcome.xml
+++ b/weitaixin/src/main/res/layout/activity_main_welcome.xml
@@ -24,19 +24,19 @@
                 android:layout_height="30dp"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="20dp"
-                android:gravity="center" />
+                android:gravity="center"
+                android:orientation="horizontal">
 
+            </LinearLayout>
 
         </FrameLayout>
 
 
-        <ImageView
+        <TextView
             android:id="@+id/ivWelcomeStart"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/welcome"
-            android:visibility="gone" />
+            android:background="@drawable/welcome"
+            android:layout_height="match_parent" />
     </FrameLayout>
 
 </LinearLayout>
