--- a/weitaixin/src/main/res/layout/pay_result.xml
+++ b/weitaixin/src/main/res/layout/pay_result.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@android:color/transparent"
     style="@style/NavPage">
 
+    <!-- 这个界面用于显示第三方app通过微信支付的结果  -->
     <TextView
         android:id="@+id/tvWxErr"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:text="这个界面用于显示第三方app通过微信支付的结果"
+        android:text=""
+        android:background="@android:color/transparent"
         android:textColor="#ff000000"
         android:textSize="20dp" />
 
