--- a/weitaixin/src/main/res/layout/viewpager_item_last.xml
+++ b/weitaixin/src/main/res/layout/viewpager_item_last.xml
@@ -4,13 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <TextView
         android:id="@+id/ivWelcome05"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scaleType="fitXY"
-        android:src="@drawable/welcome_05" />
+        android:background="@drawable/welcome_05" />
 
     <TextView
         android:id="@+id/tvNextAction"
