--- a/weitaixin/src/main/res/layout/viewpager_item.xml
+++ b/weitaixin/src/main/res/layout/viewpager_item.xml
@@ -1,6 +1,7 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scaleType="fitXY"
     />
 
