--- a/weitaixin/src/main/res/layout/viewpager_item_last.xml
+++ b/weitaixin/src/main/res/layout/viewpager_item_last.xml
@@ -4,18 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <ImageView
         android:id="@+id/ivWelcome05"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:scaleType="fitXY"
-        android:background="@drawable/welcome_05" />
+        android:scaleType="fitXY" />
 
-    <TextView
+    <ImageView
         android:id="@+id/tvNextAction"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@drawable/welcome_05_btn" />
+        android:scaleType="fitXY" />
 
 </LinearLayout>
