--- a/weitaixinpro/src/main/res/layout/activity_guardian_state.xml
+++ b/weitaixinpro/src/main/res/layout/activity_guardian_state.xml
@@ -1,13 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:id="@+id/main"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray13">
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title" />
+        layout="@layout/layout_title"/>
 
 
     <RelativeLayout
@@ -28,7 +28,7 @@
             android:gravity="center"
             android:singleLine="true"
             android:text="提供我的监测时的状态，"
-            android:textSize="@dimen/font12" />
+            android:textSize="@dimen/font12"/>
 
         <TextView
             android:id="@+id/tvTextTwo"
@@ -38,7 +38,7 @@
             android:gravity="center"
             android:singleLine="true"
             android:text="帮助医生更好掌握胎心信息"
-            android:textSize="@dimen/font12" />
+            android:textSize="@dimen/font12"/>
 
 
         <RelativeLayout
@@ -65,18 +65,18 @@
                     android:background="@null"
                     android:padding="18dp"
                     android:singleLine="true"
-                    android:text="监护目的  其他(感觉不适或用药等)"
+                    android:text="监护目的"
                     android:textColor="@drawable/text_color_hei_selector"
-                    android:textSize="@dimen/font12" />
+                    android:textSize="@dimen/font12"/>
 
                 <CheckBox
                     android:layout_width="20dp"
                     android:layout_height="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_gravity="right|center_vertical"
+                    android:layout_marginRight="10dp"
                     android:background="@drawable/nav_bar_arrow_down"
                     android:button="@null"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitCenter"/>
             </FrameLayout>
 
             <View
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_below="@id/flGuardianPurpose"
-                android:background="@color/gray4" />
+                android:background="@color/gray4"/>
 
             <FrameLayout
                 android:id="@+id/flGuardianMood"
@@ -104,17 +104,17 @@
                     android:singleLine="true"
                     android:text="监护心情"
                     android:textColor="@drawable/text_color_hei_selector"
-                    android:textSize="@dimen/font12" />
+                    android:textSize="@dimen/font12"/>
 
 
                 <CheckBox
                     android:layout_width="20dp"
                     android:layout_height="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_gravity="right|center_vertical"
+                    android:layout_marginRight="10dp"
                     android:background="@drawable/nav_bar_arrow_down"
                     android:button="@null"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitCenter"/>
             </FrameLayout>
 
         </RelativeLayout>
@@ -126,10 +126,10 @@
         android:id="@+id/ivHeader"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_below="@id/rlCenterRound"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-310dp"
-        android:layout_below="@id/rlCenterRound"
-        android:src="@drawable/guardian_heart" />
+        android:src="@drawable/guardian_heart"/>
 
 
     <TextView
@@ -143,7 +143,7 @@
         android:gravity="center"
         android:text="确定"
         android:textColor="@drawable/text_color_selector"
-        android:textSize="@dimen/font12" />
+        android:textSize="@dimen/font12"/>
 
 
 </RelativeLayout>
