--- a/weitaixin/src/main/res/layout/activity_reset_password.xml
+++ b/weitaixin/src/main/res/layout/activity_reset_password.xml
@@ -140,6 +140,6 @@
         android:padding="16dp"
         android:singleLine="true"
         android:text="确定"
-        android:textColor="@color/white0"
+        android:textColor="@drawable/text_color_selector"
         android:textSize="@dimen/font_normal"/>
 </LinearLayout>
