--- a/weitaixin/src/main/res/layout/fragment_monitor.xml
+++ b/weitaixin/src/main/res/layout/fragment_monitor.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title"/>
+        layout="@layout/layout_title" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,8 +25,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/button_monitor_helper"
-            />
+            android:src="@drawable/button_monitor_helper2" />
 
         <RelativeLayout
             android:layout_width="284dp"
@@ -38,23 +37,20 @@
                 android:id="@+id/roundScale"
                 android:layout_width="284dp"
                 android:layout_height="284dp"
-                android:layout_centerInParent="true"
-                />
+                android:layout_centerInParent="true" />
 
 
             <ImageView
                 android:id="@+id/round_background"
                 android:layout_width="262dp"
                 android:layout_height="262dp"
-                android:layout_centerInParent="true"
-                />
+                android:layout_centerInParent="true" />
 
             <ImageView
                 android:id="@+id/round_frontground"
                 android:layout_width="218dp"
                 android:layout_height="218dp"
-                android:layout_centerInParent="true"
-                />
+                android:layout_centerInParent="true" />
 
             <!--<cn.ihealthbaby.weitaixin.ui.wedget.RoundMaskView-->
             <!--android:id="@+id/round_progress_mask"-->
@@ -72,8 +68,7 @@
                 android:padding="0dp"
                 android:text="start"
                 android:textColor="@color/green0"
-                android:textSize="58sp"
-                />
+                android:textSize="58sp" />
 
             <ImageView
                 android:id="@+id/bpm"
@@ -82,7 +77,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="66dp"
                 android:src="@drawable/bpm_dark"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/hint"
@@ -94,7 +89,7 @@
                 android:text="请耐心等待"
                 android:textColor="@color/gray1"
                 android:textSize="12sp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/hint_animation"
@@ -106,7 +101,7 @@
                 android:text="..."
                 android:textColor="@color/gray1"
                 android:textSize="12sp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -127,7 +122,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="立即开始"
                 android:textColor="@color/green0"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
 
             <ImageView
                 android:id="@+id/btn_start"
@@ -136,7 +131,7 @@
                 android:layout_above="@id/tv_record"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
-                android:src="@drawable/button_start_record"/>
+                android:src="@drawable/button_start_record" />
         </RelativeLayout>
     </RelativeLayout>
 
