--- a/weitaixinpro/src/main/res/layout/item_monitor.xml
+++ b/weitaixinpro/src/main/res/layout/item_monitor.xml
@@ -81,6 +81,7 @@
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="03月16日 22:22"/>
         </LinearLayout>
     </RelativeLayout>
