--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -80,5 +80,7 @@
     <color name="text_subtitle_color">#FFA8A8A8</color>
 
     <color name="navpage">#FFE1E8EB</color>
+    <color name="wheel_timebtn_nor">#54a3fa</color>
+    <color name="wheel_timebtn_pre">#CCCCCC</color>
 
 </resources>
