--- a/weitaixinpro/src/main/res/layout/fragment_monitor.xml
+++ b/weitaixinpro/src/main/res/layout/fragment_monitor.xml
@@ -70,6 +70,20 @@
                 android:gravity="center"
                 android:includeFontPadding="false"
                 android:padding="0dp"
+                android:textColor="@color/green0"
+                android:textSize="38sp"
+
+                />
+
+            <TextView
+                android:id="@+id/tv_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@color/white0"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:padding="0dp"
                 android:text="start"
                 android:textColor="@color/green0"
                 android:textSize="58sp"
