统一文件内容,增加下拉刷新的颜色变化

--- a/weitaixinpro/src/main/res/layout/activity_monitor_detial.xml
+++ b/weitaixinpro/src/main/res/layout/activity_monitor_detial.xml
@@ -40,6 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/chs"
             android:layout_alignTop="@id/chs"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/vertical_red_line"
             />
 
