同步本地播放页面的代码和资源,改动较大,云端播放暂时用不了

--- a/weitaixin/src/main/res/layout/activity_monitor_detial.xml
+++ b/weitaixin/src/main/res/layout/activity_monitor_detial.xml
@@ -34,6 +34,17 @@
 
         </cn.ihealthbaby.weitaixin.ui.widget.CurveHorizontalScrollView>
 
+        <ImageView
+            android:id="@+id/vertical_line"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/chs"
+            android:layout_alignTop="@id/chs"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/vertical_red_line"
+            />
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
